--- a/index.qmd
+++ b/index.qmd
@@ -1,19 +1,22 @@
 ---
-title: "About Me"
-about:
-  id: me
-  template: broadside
-  image: img/profile.png
+title: "Welcome to My Website"
+output: html_document
 ---
 
-:::{#me}
+## ![](images/IMG_7437 copy-02.JPG)
 
-## Goals
+## About Me
 
-## Education
+Hi there! I'm Owen, a passionate data enthusiast, R programmer, and lifelong learner. Here you'll find information about my background, skills, and education. Whether you're a potential employer, colleague, or collaborator, I'm excited to share my journey with you.
 
-## Experience
+## Discover My Interests
 
-:::
+Beyond data and programming, I'm passionate about teaching and activism. From nature and sports to culinary arts and history, there's more to me than just data! Get to know the person behind the code.
 
-Thanks for checking out my web site!
+## Dive into My R Projects
+
+Explore my portfolio of R projects, where I showcase my data analysis, visualization, and programming skills. From data wrangling and exploratory analysis to data storytelling, each project tells a unique story.
+
+## Connect with Me
+
+Interested in collaborating on a project, discussing data science topics, or just saying hello? Don't hesitate to reach out! Connect with me via email at owen11callahan\@gmail.com
