--- a/about.qmd
+++ b/about.qmd
@@ -34,6 +34,8 @@ title: "About Me"
 
 -   ***Collaborative Projects:** Conducted research projects with two of the doctoral students in the lab, including writing thorough literature reviews and co-authoring two papers*
 
+![](images/IMG_5310-01.png)
+
 ### Private Tutor in Statistics, **Self Employed,** Groningen, NL
 
 *Supported 16 bachelor students and 8 master's students in exam preparation and refining research methodology.*
