--- a/interest.qmd
+++ b/interest.qmd
@@ -1,5 +1,7 @@
 ## Professional Goals:
 
+![](images/IMG_5282-01.png)
+
 ### Teaching Statistics in the Social Sciences
 
 *Inspiring teachers are like summer camp counselors. Realistically, they might seem worlds apart, but they share a crucial trait: they are both excellent storytellers. Inspiring teachers unravel complex topics through stories, enabling their students to form emotional connections with the lessons. They focus on more than just imparting knowledge; they empower students to apply imaginative thinking in the classroom. Inspiring teachers build a nurturing space where students feel encouraged to explore and question.*
