--- a/interest.qmd
+++ b/interest.qmd
@@ -1,8 +1,24 @@
-## Professional Goals:
+## My Academic and Personal Interests:
+
+1.  Community-Based Psychological Research
+
+2.  Model Development
+
+3.  Teaching Statistics in the Social Sciences
+
+4.  Sports Psychology and Coaching
+
+### 1. Community-Based Psychological Research
+
+Humans are evolutionarely grounded for community-based lifestyles. Social intimacy has shown to improve mental and physical health. Yet, individualized living has sent us toward isolated living.
+
+Increasing diverity has played a role in recent trends of isolation.
+
+Placing more funding into personalizing neighborhoods that would build a new group identity for which people can embody.
 
 ![](images/IMG_5282-01.png)
 
-### Teaching Statistics in the Social Sciences
+### 2. Teaching Statistics in the Social Sciences
 
 *Inspiring teachers are like summer camp counselors. Realistically, they might seem worlds apart, but they share a crucial trait: they are both excellent storytellers. Inspiring teachers unravel complex topics through stories, enabling their students to form emotional connections with the lessons. They focus on more than just imparting knowledge; they empower students to apply imaginative thinking in the classroom. Inspiring teachers build a nurturing space where students feel encouraged to explore and question.*
 
