--- a/bayes.qmd
+++ b/bayes.qmd
@@ -1,127 +1,69 @@
-### **Step 1: Install and load necessary packages**
+# Project Description
+
+*Bayesian analysis is a statistical approach that interprets probability as a measure of belief or confidence in an event occurring. It allows us to update our beliefs about parameters of interest based on evidence (data) as it becomes available. This is a field of Statistics that I am constantly trying to learn more about.*
+
+*Considering my love for exercise and health, I found a dataset on physical activity and heart rate to use for a Bayesian analysis. I am interested in exploring the relationship between exercise and heart rate, which calls for a linear regression approach. To perform a Bayesian linear regression, I will use the `brms` package in R. This package provides an interface to fit complex Bayesian models using the probabilistic programming language Stan. Stan's efficient Hamiltonian Monte Carlo (HMC) algorithms can sample from the posterior distribution of the model parameters.*
+
+*I could not have learned some of these steps by myself. An amazing resource to check out is `bayesrulesbook.com`; it will teach you so much about the Bayesian philosophy and techniques. If you curious about where I learned some of the steps below, check out Chapter 6!*
+
+### Step 1: Install and load necessary packages
 
 ```{r}
 options(repos = c(CRAN = "https://cloud.r-project.org"))
-install.packages("bayesplot")
-install.packages("brms")
 library(brms)
 library(bayesplot)
 ```
 
 ```{r}
-# Set seed for reproducibility
-set.seed(123)
-
-# Generate data for 100 individuals
-n <- 145
-
-# Generate random values for physical activity level (in minutes)
-physical_activity <- rpois(n, lambda = 60)
-
-# Generate random values for heart rate (in beats per minute)
-heart_rate <- rnorm(n, mean = 75, sd = 10)
-
-# Generate random values for age (in years)
-age <- sample(18:80, n, replace = TRUE)
-
-# Generate random values for weight (in kilograms)
-weight <- rnorm(n, mean = 70, sd = 10)
-
-# Generate random values for gender (1 = male, 2 = female)
-gender <- sample(1:2, n, replace = TRUE)
-
-# Create a data frame
-data <- data.frame(
-  physical_activity = physical_activity,
-  heart_rate = heart_rate,
-  age = age,
-  weight = weight,
-  gender = factor(gender, labels = c("Male", "Female"))
-)
-
-# View the first few rows of the dataset
+data<-read.csv("exercise_data.csv")
 head(data)
 ```
 
-### Step 2: Bayesian Linear Regression
-
-I am interested in assessing the relationship between exercise and heart rate.
+### Step 2: Create the Bayesian Linear Regression
 
 ```{r}
-# In this example, we'll model heart rate as a function of physical activity, age, weight, and gender
+# We can model heart rate as a function of physical activity, age, weight, and gender
 model <- brm(
   heart_rate ~ physical_activity + age + weight + gender,
   data = data,
-  family = gaussian()  # Assuming heart rate follows a Gaussian (normal) distribution
+  family = gaussian(), # Assuming heart rate follows a Gaussian normal distribution
+  prior = c(set_prior("normal(0, 10)", class = "b")) # set a normal prior of M = 0 and SD = 10
 )
 
-# Print a summary of the fitted model
+# Print a summary of the fitted model, we can assess our estimates and our credible intervals
 summary(model)
-
-# Plot the posterior distributions of model parameters
-plot(model)
 ```
 
-*Now, lets compute our means and credible intervals.*
+***Important Note:** Credible intervals crossing through 0 in Bayesian analysis indicate uncertainty or lack of evidence for a nonzero effect. They prompt careful consideration of the implications for your research question and the need for further investigation or interpretation in light of these findings.*
+
+### Step 3: Data Visualization
+
+-   ***Trace Plots**: Displays the sampled values of the parameters over iterations of the Markov Chain Monte Carlo (MCMC) sampling.*
+
+    -   ***Interpretation**: Look for a "fuzzy caterpillar" appearance where the chains mix well and cover the parameter space evenly. This suggests good mixing and convergence. If the chains show trends or don't mix well, it indicates poor convergence and potential issues with the sampling process.*
 
 ```{r}
-# Extract posterior summary
-posterior_summary <- posterior_summary(model)
-
-# Extract posterior means from the summary
-posterior_means <- fixef(model)
-posterior_means <- posterior_means[, "Estimate"]
-
-# Specify prior means (assuming a normal prior with mean 0)
-prior_means <- rep(0, length(posterior_means))
-
-# Compute credible intervals for posterior means
-posterior_quantiles <- quantile(model$posterior, c(0.025, 0.975))
-
-# Assign the quantiles to posterior credible intervals
-posterior_ci <- posterior_quantiles
-
-# Compute credible intervals for prior means
-prior_ci <- c(NA, NA)  # Prior distribution centered at 0, so credible intervals are NA
-
-# Test for difference between posterior and prior means
-difference_test <- ifelse(posterior_ci[1] > prior_ci[2] | posterior_ci[2] < prior_ci[1],
-                          "Significant difference", "No significant difference")
+# Trace Plots
+trace_plot <- mcmc_trace(model, size = .1)
+print(trace_plot)
 ```
 
-### Step 3: Results Interpretation and Reporting
+-   ***Density Plots**: Shows the posterior distributions of the parameters.*
+
+    -   ***Interpretation**: These should be smooth and unimodal. Multiple peaks might indicate issues with convergence or that the model has not properly identified the posterior distribution.*
 
 ```{r}
-# Extract summary of the posterior distribution
-posterior_summary <- summary(model)
+# Density Plots (Posterior distributions)
+mcmc_dens(model) + 
+  yaxis_text(TRUE)
+```
 
-# Extract posterior means and credible intervals
-posterior_summary_table <- as.data.frame(posterior_summary$fixed)
+-   ***Density Overlay Plot**: Compares the density of the observed data to the density of the data generated by the model.*
 
-# Extract only the mean and credible intervals
-posterior_summary_table <- posterior_summary_table[, c("Estimate", "Est.Error")]
+    -   ***Interpretation**: The observed data (usually shown in a solid line) should ideally lie within the range of the simulated data (shaded area or dashed lines). If the observed data fall outside this range, it may indicate that the model does not fit the data well.*
 
-# Rename the columns for clarity
-colnames(posterior_summary_table) <- c("Posterior_Mean", "Posterior_Std_Dev")
-
-# Add parameter names
-posterior_summary_table$Parameter <- rownames(posterior_summary_table)
-
-# Compute credible intervals
-posterior_summary_table$Posterior_CI_Lower <- posterior_summary_table$Posterior_Mean - 1.96 * posterior_summary_table$Posterior_Std_Dev
-posterior_summary_table$Posterior_CI_Upper <- posterior_summary_table$Posterior_Mean + 1.96 * posterior_summary_table$Posterior_Std_Dev
-
-# Specify prior means (assuming a normal prior with mean 0)
-prior_means <- rep(0, nrow(posterior_summary_table))
-
-# Create a summary table
-summary_table <- data.frame(
-  Parameter = posterior_summary_table$Parameter,
-  Posterior_Mean = posterior_summary_table$Posterior_Mean,
-  Posterior_CI_Lower = posterior_summary_table$Posterior_CI_Lower,
-  Posterior_CI_Upper = posterior_summary_table$Posterior_CI_Upper, Difference_Test = ifelse(posterior_summary_table$Posterior_CI_Lower > 0 | posterior_summary_table$Posterior_CI_Upper < 0,
-                           "Significant difference", "No significant difference")
-)
-library(knitr)
-kable(summary_table, format = "markdown")
+```{r}
+# Posterior Predictive Checks (Density Overlay)
+pp_check_plot <- pp_check(model, ndraws = 100)
+print(pp_check_plot)
 ```
